HowWeWork Section version 03.00.00

--- a/src/components/CoachingsOverview.scss
+++ b/src/components/CoachingsOverview.scss
@@ -2,7 +2,7 @@ $black__color: #333;
 $white__color: #ffffff;
 $primary__color: #9a92e6;
 $light__primary__color: #f2f1fd;
-$secondary__color: #7ce577;
+$green__color: #7ce577;
 
 .CoachingsOverview {
   background-color: $light__primary__color;
