--- a/src/components/Benefits.scss
+++ b/src/components/Benefits.scss
@@ -4,7 +4,9 @@
   justify-content: center;
   align-items: center;
   margin: 80px;
+  margin-top: 180px;
   background-color: white;
+  position: relative;
 }
 
 .start__changing {
@@ -56,4 +58,11 @@
   flex-direction: column;
   gap: 10px;
   padding: 20px;
+}
+
+.global__symbol {
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  top: -100px;
 }
