--- a/src/components/HeroSection.scss
+++ b/src/components/HeroSection.scss
@@ -1,7 +1,7 @@
 $black__color: #333;
 $white__color: #ffffff;
 $primary__color: #9a92e6;
-$secondary__color: #7ce577;
+$green__color: #7ce577;
 
 .HeroSection {
   padding: 0 80px;
