--- a/src/components/HappyStart.scss
+++ b/src/components/HappyStart.scss
@@ -5,6 +5,7 @@ $secondary__color: rgba(154, 146, 230, 0.3);
 $green__color: #7ce577;
 
 .HappyStart {
+  padding-bottom: 30px;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -13,11 +14,17 @@ $green__color: #7ce577;
   margin: 80px;
   overflow: hidden;
 
+  h1 {
+    margin: 0;
+    margin-bottom: -20px;
+  }
+
   button {
     border: none;
     background-color: $primary__color;
     color: $white__color;
     padding: 20px;
     width: 15%;
+    margin: -10px 0 10px 0;
   }
 }
