--- a/src/components/BecomeACoach.scss
+++ b/src/components/BecomeACoach.scss
@@ -10,35 +10,40 @@ $green__color: #7ce577;
   padding: 40px 0;
   display: flex;
   justify-content: space-around;
-}
 
-.left {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
-
-  h1 {
-    margin-bottom: -10px;
-  }
-
-  ul {
-    list-style: none;
-  }
-
-  .btns {
+  .left {
     display: flex;
-    gap: 30px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-between;
 
-    button {
-      border: none;
-      background-color: $primary__color;
-      color: $white__color;
-      padding: 20px;
+    h1 {
+      margin-bottom: 0px;
     }
 
-    p {
-      color: $primary__color;
+    ul {
+      list-style: none;
+      margin-left: -30px;
+
+      li {
+        margin-bottom: 20px;
+      }
+    }
+
+    .btns {
+      display: flex;
+      gap: 30px;
+
+      button {
+        border: none;
+        background-color: $primary__color;
+        color: $white__color;
+        padding: 20px;
+      }
+
+      p {
+        color: $primary__color;
+      }
     }
   }
 }
