--- a/src/components/client/HeroSection.scss
+++ b/src/components/client/HeroSection.scss
@@ -6,7 +6,7 @@ $green__color: #7ce577;
 .HeroSection {
   padding: 0 80px;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("./../assets/heroFoto.svg");
+    url("./../../assets/client/heroFoto.svg");
   min-height: 800px;
   display: flex;
   flex-direction: column;
