--- a/src/components/coach/FAQ.scss
+++ b/src/components/coach/FAQ.scss
@@ -6,7 +6,7 @@ $secondary__color: rgba(154, 146, 230, 0.3);
 $green__color: #7ce577;
 
 .FAQ {
-  padding: 80px 120px;
+  padding: 80px 120px 120px;
 
   h1 {
     text-align: center;
