--- a/src/components/general/Header.scss
+++ b/src/components/general/Header.scss
@@ -7,21 +7,54 @@ $green__color: #7ce577;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: aliceblue;
-  padding: 0 80px;
-}
+  padding: 20px 80px;
+  // position: sticky;
+  background-color: #333;
 
-.left__header {
-  display: flex;
-  align-items: center;
-}
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    color: $white__color;
+  }
 
-.nav__lists {
-  list-style: none;
-  display: flex;
-  gap: 20px;
-  a {
-    color: $black__color;
-    text-decoration: none;
+  .left__header {
+    display: flex;
+    align-items: center;
+    gap: 80px;
+
+    .logo__wrapper {
+      font-size: 48px;
+      line-height: 56px;
+    }
+
+    .nav__lists {
+      list-style: none;
+      display: flex;
+      gap: 20px;
+
+      a {
+        text-decoration: none;
+        font-size: 24px;
+        line-height: 32px;
+      }
+    }
+  }
+  .right__navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+
+    .language__dropdown {
+      background: none;
+      border: none;
+      padding: 10px 20px;
+      font-size: 24px;
+      line-height: 32px;
+    }
   }
 }
