--- a/src/components/coachProfile/CoachProfile.scss
+++ b/src/components/coachProfile/CoachProfile.scss
@@ -12,7 +12,7 @@ $green__secondary__color: #eef7e9;
   padding: 80px 300px;
   background-color: $secondary__color;
   display: flex;
-  gap: 20px;
+  gap: 40px;
 
   * {
     padding: 0;
@@ -112,24 +112,37 @@ $green__secondary__color: #eef7e9;
   }
 
   .right__sidebar {
+    max-height: fit-content;
+
+    .image__wrapper {
+      width: 100%;
+      height: 240px;
+      background-image: url(../../assets/coachProfile/woman1.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: 50%;
+    }
+
     .quickBox {
       display: flex;
       flex-direction: column;
       gap: 10px;
-      padding: 40px;
+      padding: 0 20px 20px;
       background-color: $white__color;
+      margin-bottom: 20px;
 
       .info {
-        padding: 10px;
+        padding: 20px 0 10px;
         display: flex;
-        gap: 5px;
+        gap: 60px;
+        justify-content: center;
 
         .smallInfo {
           display: flex;
+          flex-direction: column;
           align-items: center;
           justify-content: center;
-          padding: 2px;
-          max-width: 50%;
+          padding: 5px 30px;
           background-color: $green__secondary__color;
           color: $green__darker__color;
           font-size: 14px;
@@ -138,16 +151,20 @@ $green__secondary__color: #eef7e9;
         .wage {
           font-size: 19px;
           line-height: 29px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
         }
       }
 
       .trailSession,
       .message,
       .saveToMyList {
-        padding: 10px 20px;
+        padding: 10px 80px;
         border: none;
         font-size: 15px;
         line-height: 23px;
+        white-space: nowrap;
       }
       .trailSession {
         background-color: $primary__color;
@@ -162,14 +179,32 @@ $green__secondary__color: #eef7e9;
         border: 1px solid $primary__color;
         background: none;
         color: $primary__color;
+        margin-bottom: 10px;
       }
 
       .bookedLessons,
       .response {
+        display: flex;
+        gap: 10px;
+
         p {
           font-size: 13px;
           line-height: 20px;
         }
+      }
+    }
+
+    .popularity {
+      background-color: $white__color;
+      display: flex;
+      align-items: flex-start;
+      gap: 10px;
+      padding: 20px 20px;
+
+      .text__Box {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
       }
     }
   }
