--- a/client/src/components/chat/Chat.scss
+++ b/client/src/components/chat/Chat.scss
@@ -116,5 +116,22 @@ $green__color: #7ce577;
         }
       }
     }
+
+    .bodyOF__mainChat {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 5px;
+
+      .message__box {
+        background-color: $primary__color;
+        color: $white__color;
+        padding: 5px;
+        width: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+      }
+    }
   }
 }
