--- a/client/src/components/chat/Chat.scss
+++ b/client/src/components/chat/Chat.scss
@@ -7,8 +7,30 @@ $secondary__color: rgba(154, 146, 230, 0.3);
 $green__color: #7ce577;
 
 .Chat {
-  padding: 40px 80px;
+  padding: 0px;
   display: flex;
+  overflow-x: hidden;
+  /* width */
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #c5c5c5;
+    border-radius: 4px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
   * {
     margin: 0;
     padding: 0;
@@ -21,6 +43,7 @@ $green__color: #7ce577;
   .left__sidebar {
     width: 20%;
     background-color: $white__color;
+
     .headOf__sidebar {
       max-height: 70px;
       display: flex;
@@ -48,6 +71,8 @@ $green__color: #7ce577;
     .mainOf__sidebar {
       display: flex;
       flex-direction: column;
+      height: 70vh;
+      overflow-y: scroll;
 
       .chat__overview {
         display: flex;
@@ -93,23 +118,27 @@ $green__color: #7ce577;
   }
 
   .main__chat {
-    background-color: #6f757b;
-    width: 100%;
+    background-color: #f2f2f2;
+    width: 80%;
 
     .headOf__mainChat {
-      max-height: 70px;
       background-color: $secondary__color;
-      padding: 10px;
+      height: 70px;
+      max-height: 70px;
       display: flex;
+      flex-direction: row;
       align-items: center;
-      gap: 10px;
+      padding-inline-start: 10px;
+
       .profile__photo {
         width: 50px;
         height: 50px;
         object-fit: cover;
         border-radius: 50%;
       }
+
       .textbox {
+        margin-inline-start: 15px;
         .contactName {
           color: $white__color;
           font-weight: bold;
@@ -120,17 +149,70 @@ $green__color: #7ce577;
     .bodyOF__mainChat {
       display: flex;
       flex-direction: column;
-      align-items: flex-end;
       gap: 5px;
+      padding: 1%;
+      height: 70vh;
+      overflow-y: scroll;
 
       .message__box {
-        background-color: $primary__color;
         color: $white__color;
         padding: 5px;
-        width: 20px;
+        width: auto;
         display: flex;
         align-items: center;
         justify-content: flex-start;
+        border-radius: 4px;
+        max-width: 90%;
+      }
+
+      .message__box.sent {
+        background-color: $primary__color;
+        align-self: flex-end;
+
+      }
+
+      .message__box.received {
+        background-color: $green__color;
+        align-self: flex-start;
+      }
+    }
+
+    .footerOf__mainChat {
+      width: 100%;
+
+      .form-group {
+        display: flex;
+        flex-direction: row;
+
+        .new__message__input {
+          width: 90%;
+          height: 25px;
+          border: 1px solid #a5a5a5;
+          border-radius: 4px;
+          transition: .5s;
+        }
+
+        .new__message__input:focus {
+          border: 1px solid #f2f2f2;
+        }
+
+        .btn-primary {
+          margin-inline-start: 2px;
+          margin-inline-end: 2px;
+          width: 10%;
+          text-align: center;
+          background-color: $primary__color;
+          color: $white__color;
+          border: 1px solid $primary__color;
+          border-radius: 4px;
+          transition: .4s;
+        }
+
+        .btn-primary:hover {
+          cursor: pointer;
+          background-color: $green__color;
+          border: 1px solid $green__color;
+        }
       }
     }
   }
