--- a/client/src/components/client/CoachingsOverview.scss
+++ b/client/src/components/client/CoachingsOverview.scss
@@ -1,8 +1,4 @@
-$black__color: #333;
-$white__color: #ffffff;
-$primary__color: #9a92e6;
-$light__primary__color: #f2f1fd;
-$green__color: #7ce577;
+@import "../Globals.scss";
 
 .CoachingsOverview {
   background-color: $light__primary__color;
