--- a/client/src/components/client/HappyStart.scss
+++ b/client/src/components/client/HappyStart.scss
@@ -1,8 +1,4 @@
-$black__color: #333;
-$white__color: #ffffff;
-$primary__color: #9a92e6;
-$secondary__color: rgba(154, 146, 230, 0.3);
-$green__color: #7ce577;
+@import "../Globals.scss";
 
 .HappyStart {
   padding-bottom: 30px;
