--- a/client/src/components/client/HeroSection.scss
+++ b/client/src/components/client/HeroSection.scss
@@ -1,7 +1,4 @@
-$black__color: #333;
-$white__color: #ffffff;
-$primary__color: #9a92e6;
-$green__color: #7ce577;
+@import "../Globals.scss";
 
 .HeroSection {
   padding: 0 80px;
