--- a/client/src/components/chat/Chat.scss
+++ b/client/src/components/chat/Chat.scss
@@ -1,10 +1,4 @@
-$black__color: #333;
-$white__color: #ffffff;
-$gray__primary__color: rgba(204, 107, 107, 0.5);
-$gray__secondary__color: #6f757b;
-$primary__color: #9a92e6;
-$secondary__color: rgba(154, 146, 230, 0.3);
-$green__color: #7ce577;
+@import "../Globals.scss";
 
 .Chat {
   padding: 0px;
