--- a/client/src/components/client/HowWeWork.scss
+++ b/client/src/components/client/HowWeWork.scss
@@ -1,3 +1,4 @@
+@import "../Globals.scss";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 
 $black__color: #333;
