--- a/client/src/components/coachProfile/CoachProfile.scss
+++ b/client/src/components/coachProfile/CoachProfile.scss
@@ -1,14 +1,4 @@
-$black__color: #333;
-$black__secondary__color: #32393f;
-$white__color: #ffffff;
-$gray__color: rgba(0, 0, 0, 0.5);
-$light__gray__color: rgb(151, 151, 151);
-$primary__color: #2163a5;
-$light__primary__color: #b1d8ff;
-$secondary__color: #84dfff;
-$green__primary__color: #7ce577;
-$green__darker__color: #50bf16;
-$green__secondary__color: #eef7e9;
+@import "../Globals.scss";
 
 .CoachProfile {
   padding: 80px 300px;
