--- a/client/src/components/service/Service.scss
+++ b/client/src/components/service/Service.scss
@@ -1,13 +1,4 @@
-$black__color: #333;
-$black__secondary__color: #32393f;
-$white__color: #ffffff;
-$gray__color: rgba(0, 0, 0, 0.5);
-$light__gray__color: rgb(128, 126, 126);
-$primary__color: #2163a5;
-$light__primary__color: #b1d8ff;
-$secondary__color: #84dfff;
-$green__color: #7ce577;
-$star__color: #ffaa46;
+@import "../Globals.scss";
 
 .Service {
   padding: 40px 240px 80px;
