Added Description Service Section  -- version 11.52.02

--- a/client/src/components/Globals.scss
+++ b/client/src/components/Globals.scss
@@ -3,6 +3,7 @@ $black__secondary__color: #32393f;
 $white__color: #ffffff;
 $gray__color: rgba(0, 0, 0, 0.5);
 $gray__secondary__color: #6f757b;
+$gray__Description_color: #62646a;
 $light__gray__color: rgb(128, 126, 126);
 $primary__color: #2163a5;
 $light__primary__color: #b1d8ff;
