--- a/client/src/components/chat/Chat.scss
+++ b/client/src/components/chat/Chat.scss
@@ -1,6 +1,25 @@
 @import "../Globals.scss";
 
 .Chat {
+  .contact__name__info {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
+    .localTime {
+      margin-left: 10px;
+    }
+
+    .localTime, .lastSeen {
+      font-size: 14px;
+      span {
+        color: $primary__color;
+        font-weight: 500;
+        font-style: italic;
+      }
+    }
+  }
+
   padding: 0px;
   display: flex;
   overflow-x: hidden;
@@ -29,7 +48,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Roboto;
+    font-family: "Roboto";
     font-style: normal;
     font-weight: normal;
   }
@@ -59,6 +78,20 @@
       .right__options {
         display: flex;
         gap: 15px;
+
+        .search__for__users {
+          border: 1px solid #f2f2f2;
+          border-radius: 4px;
+          padding-top: 5px;
+          padding-bottom: 5px;
+          padding-left: 5px;
+          outline: none;
+          transition: .4s;
+        }
+
+        .search__for__users:focus {
+          box-shadow: $secondary__color 0px 2px 8px;
+        }
       }
     }
 
@@ -85,6 +118,8 @@
         .textBox {
           // near to profile photo
           margin-left: -50px;
+          display: flex;
+          flex-direction: column;
 
           .contactName {
             font-weight: bold;
@@ -136,6 +171,7 @@
         .contactName {
           color: $white__color;
           font-weight: bold;
+          font-size: 22px;
         }
       }
     }
@@ -148,26 +184,58 @@
       height: 70vh;
       overflow-y: scroll;
 
-      .message__box {
-        color: $white__color;
-        padding: 5px;
-        width: auto;
+      .message__box__container {
         display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        border-radius: 4px;
-        max-width: 90%;
+        flex-direction: row;
+        width: 100%;
+        gap: 5px;
+
+        .profile__pic__content {
+          display: flex;
+          align-items: flex-end;
+
+          .profile__photo {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+          }
+        }
       }
 
-      .message__box.sent {
-        background-color: $primary__color;
-        align-self: flex-end;
-
+      .message__box__container.reverse {
+        flex-direction: row-reverse;
       }
 
-      .message__box.received {
-        background-color: $green__color;
-        align-self: flex-start;
+      .message__box__content {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: end;
+
+        .message__box {
+          color: $white__color;
+          padding: 5px;
+          width: auto;
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          border-radius: 8px;
+          max-width: 90%;
+          margin-top: 2px;
+          margin-bottom: 2px;
+        }
+
+        .message__box.sent {
+          background-color: $primary__color;
+          align-self: flex-end;
+  
+        }
+  
+        .message__box.received {
+          color: $black__color;
+          background-color: $secondary__color;
+          align-self: flex-start;
+        }
       }
     }
 
@@ -181,13 +249,18 @@
         .new__message__input {
           width: 90%;
           height: 25px;
-          border: 1px solid #a5a5a5;
+          padding-top: 20px;
+          padding-bottom: 20px;
+          padding-left: 10px;
+          border: 1px solid #f1f1f1;
           border-radius: 4px;
+          outline: none;
+          font-size: 16px;
           transition: .5s;
         }
 
         .new__message__input:focus {
-          border: 1px solid #f2f2f2;
+          box-shadow: $secondary__color 0px 2px 8px;
         }
 
         .btn-primary {
@@ -200,12 +273,15 @@
           border: 1px solid $primary__color;
           border-radius: 4px;
           transition: .4s;
+          font-size: 16px;
         }
 
         .btn-primary:hover {
           cursor: pointer;
-          background-color: $green__color;
-          border: 1px solid $green__color;
+          box-shadow: $secondary__color 0px 2px 8px;
+          background-color: $secondary__color;
+          color: $black__color;
+          border: 1px solid $secondary__color;
         }
       }
     }
