--- a/client/src/components/Globals.scss
+++ b/client/src/components/Globals.scss
@@ -7,6 +7,7 @@ $gray__Description_color: #62646a;
 $light__gray__color: rgb(128, 126, 126);
 $primary__color: #2163a5;
 $light__primary__color: #b1d8ff;
+$very__light__blue: #eef5fc;
 $secondary__color: #84dfff;
 $green__color: #7ce577;
 $star__color: #ffaa46;
