--- a/client/src/components/general/Navbar.scss
+++ b/client/src/components/general/Navbar.scss
@@ -2,13 +2,14 @@
 
 .Navbar {
   display: flex;
+  gap: 180px;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 200px;
+  padding: 10px 180px;
   position: sticky;
   top: 0;
   z-index: 1;
-  background-color: #333;
+  background-color: $primary__color;
 
   * {
     margin: 0;
@@ -20,49 +21,102 @@
     color: $white__color;
   }
 
-  .left__navbar {
+  .Searchbar {
+    flex: 1;
     display: flex;
+    gap: 5px;
     align-items: center;
+    border: 1px solid $light__primary__color;
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 0 0 0 10px;
 
-    .logo__wrapper {
+    .iconWrapper {
       img {
-        width: 220px;
-        height: auto;
+        color: $white__color;
       }
     }
 
-    .nav__lists {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      font-size: 24px;
-      line-height: 32px;
-
-      a {
-        text-decoration: none;
-      }
-
-      button {
-        background: none;
-        border: none;
-        color: inherit;
-        font-size: inherit;
-        line-height: inherit;
-      }
-    }
-  }
-  .right__navbar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 40px;
-
-    .language__dropdown {
+    input {
+      flex: 1;
       background: none;
       border: none;
-      padding: 10px 20px;
-      font-size: 24px;
-      line-height: 32px;
+      padding: 10px;
+    }
+    input:focus {
+      color: $white__color;
+      outline: none;
+    }
+
+    ::placeholder {
+      /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: $white__color;
+      opacity: 1; /* Firefox */
+    }
+
+    :-ms-input-placeholder {
+      /* Internet Explorer 10-11 */
+      color: $white__color;
+    }
+
+    ::-ms-input-placeholder {
+      /* Microsoft Edge */
+      color: $white__color;
+    }
+
+    button {
+      padding: 10px 15px;
+      border: none;
+      background-color: $white__color;
+      color: $primary__color;
+    }
+  }
+
+  .nav__lists {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    font-size: 16px;
+    text-transform: uppercase;
+
+    li {
+      list-style: none;
+      font-weight: 500;
+      a {
+        text-decoration: none;
+        font-weight: 500;
+        position: relative;
+      }
+
+      a:hover:before {
+        content: "";
+        position: absolute;
+        bottom: -7px;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: $white__color;
+      }
+
+      .loginBtn,
+      .registerBtn {
+        padding: 10px 15px;
+        font-weight: 500;
+      }
+
+      .loginBtn {
+        margin-left: 5px;
+        background: none;
+        border: 1px solid $white__color;
+        border-radius: 20px;
+        color: $white__color;
+      }
+      .registerBtn {
+        background: linear-gradient(90deg, #ffffff 0%, #83deff 186.42%);
+        border: none;
+        border-radius: 20px;
+        color: $primary__color;
+      }
     }
   }
 }
