--- a/client/src/components/Home/HeroSection.scss
+++ b/client/src/components/Home/HeroSection.scss
@@ -1,4 +1,5 @@
 @import "../Globals.scss";
+@import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
 
 .HeroSection {
   padding: 40px 240px 80px;
@@ -27,12 +28,15 @@
 
   .hero__heading {
     color: $white__color;
-    font-size: 42px;
-  }
+    font-size: 40px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    line-height: 47px;
 
-  .bold {
-    display: block;
-    font-weight: bold;
+    .Cookie {
+      font-family: "Cookie", cursive;
+      font-size: 60px;
+    }
   }
 
   .search__wrapper {
