ServiceCard eddited in ServicesPage -- version 11.62.16

--- a/client/src/components/Globals.scss
+++ b/client/src/components/Globals.scss
@@ -1,10 +1,11 @@
 $black__color: #333;
 $black__secondary__color: #32393f;
 $white__color: #ffffff;
+$darker_gray__color: rgb(85, 85, 85);
 $gray__color: rgba(0, 0, 0, 0.5);
 $gray__secondary__color: #6f757b;
 $gray__Description_color: #62646a;
-$light__gray__color: rgb(128, 126, 126);
+$light__gray__color: #b5b6ba;
 $primary__color: #2163a5;
 $light__primary__color: #b1d8ff;
 $very__light__blue: #eef5fc;
