--- a/client/src/components/Services/Home.scss
+++ b/client/src/components/Services/Home.scss
@@ -33,15 +33,18 @@
     grid-template-columns: repeat(5, 1fr);
     gap: 40px;
     .gig {
+      min-height: 380px;
+      min-width: 320px;
       background-color: $white__color;
+      border: 0.2px solid $gray__secondary__color;
 
       .header__box {
         overflow: hidden;
         background-image: url("../../assets/home/woman.jpg");
         background-position: center;
         background-size: cover;
-        height: 185px;
-        width: 275px;
+        min-height: 150px;
+        min-width: 150px;
         display: flex;
         justify-content: space-between;
         padding: 20px;
@@ -51,21 +54,23 @@
         }
       }
       .middle__box {
-        padding: 20px;
+        padding: 10px 20px 10px;
         display: flex;
         flex-direction: column;
         gap: 10px;
+        border-top: 1px solid $light__gray__color;
         .userInfo {
           display: flex;
           gap: 10px;
           align-items: center;
 
           img {
-            width: 30px;
-            height: 30px;
+            width: 24px;
+            height: 24px;
             border-radius: 50%;
           }
           .textBox {
+            font-size: 14px;
             .fullName {
               font-weight: bold;
             }
@@ -80,14 +85,46 @@
           p {
             margin-left: 4px;
             color: #f7b24a;
-            font-size: 24px;
+            font-size: 14px;
             font-weight: bold;
           }
           .gray {
             color: $light__gray__color;
+            font-weight: 400;
+            margin-left: 2px;
           }
           img {
-            width: 24px;
+            width: 14px;
+          }
+        }
+      }
+      .footer__box {
+        border-top: 0.3px solid $light__gray__color;
+        padding: 10px 20px 0px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .images_wrapper {
+          display: flex;
+          gap: 5px;
+          img {
+            height: 20px;
+            width: auto;
+            fill: $light__gray__color;
+          }
+        }
+        .textBox {
+          display: flex;
+          align-items: center;
+          p {
+            color: $gray__secondary__color;
+            font-size: 8px;
+            text-transform: uppercase;
+          }
+          .price {
+            color: $darker_gray__color;
+            font-weight: 500;
+            font-size: 14px;
           }
         }
       }
