--- a/client/src/components/chat/Chat.scss
+++ b/client/src/components/chat/Chat.scss
@@ -1,6 +1,8 @@
 @import "../Globals.scss";
 
 .Chat {
+  padding: 0 240px 80px;
+
   .contact__name__info {
     display: flex;
     flex-direction: row;
@@ -10,10 +12,11 @@
       margin-left: 10px;
     }
 
-    .localTime, .lastSeen {
+    .localTime,
+    .lastSeen {
       font-size: 14px;
       span {
-        color: $primary__color;
+        color: $white__color;
         font-weight: 500;
         font-style: italic;
       }
@@ -86,7 +89,7 @@
           padding-bottom: 5px;
           padding-left: 5px;
           outline: none;
-          transition: .4s;
+          transition: 0.4s;
         }
 
         .search__for__users:focus {
@@ -117,7 +120,7 @@
 
         .textBox {
           // near to profile photo
-          margin-left: -50px;
+          margin-left: -135px;
           display: flex;
           flex-direction: column;
 
@@ -151,7 +154,7 @@
     width: 80%;
 
     .headOf__mainChat {
-      background-color: $secondary__color;
+      background-color: $primary__color;
       height: 70px;
       max-height: 70px;
       display: flex;
@@ -214,7 +217,7 @@
 
         .message__box {
           color: $white__color;
-          padding: 5px;
+          padding: 8px 12px;
           width: auto;
           display: flex;
           align-items: center;
@@ -228,12 +231,11 @@
         .message__box.sent {
           background-color: $primary__color;
           align-self: flex-end;
-  
         }
-  
+
         .message__box.received {
-          color: $black__color;
-          background-color: $secondary__color;
+          color: $primary__color;
+          background-color: $light__primary__color;
           align-self: flex-start;
         }
       }
@@ -256,7 +258,7 @@
           border-radius: 4px;
           outline: none;
           font-size: 16px;
-          transition: .5s;
+          transition: 0.5s;
         }
 
         .new__message__input:focus {
@@ -272,7 +274,7 @@
           color: $white__color;
           border: 1px solid $primary__color;
           border-radius: 4px;
-          transition: .4s;
+          transition: 0.4s;
           font-size: 16px;
         }
 
