Improvements in the Chat -- version 11.62.18

--- a/client/src/components/chat/Chat.scss
+++ b/client/src/components/chat/Chat.scss
@@ -1,7 +1,7 @@
 @import "../Globals.scss";
 
 .Chat {
-  padding: 0 240px 80px;
+  // padding: 0 240px 80px; // not working
 
   .contact__name__info {
     display: flex;
