--- a/client/src/components/general/Navbar.scss
+++ b/client/src/components/general/Navbar.scss
@@ -112,7 +112,7 @@
         color: $white__color;
       }
       .registerBtn {
-        background: linear-gradient(90deg, #ffffff 0%, #83deff 186.42%);
+        background-color: $white__color;
         border: none;
         border-radius: 20px;
         color: $primary__color;
