--- a/client/src/components/Home/BecomeACoach.scss
+++ b/client/src/components/Home/BecomeACoach.scss
@@ -1,6 +1,7 @@
 @import "../Globals.scss";
 
 .BecomeACoach {
+  padding: 0 240px 80px;
   margin: 80px;
   background-color: $white__color;
   padding: 40px 0;
