--- a/client/src/components/Home/Benefits.scss
+++ b/client/src/components/Home/Benefits.scss
@@ -1,6 +1,7 @@
 @import "../Globals.scss";
 
 .Benefits {
+  padding: 0 240px 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
