--- a/client/src/components/Home/HowWeWork.scss
+++ b/client/src/components/Home/HowWeWork.scss
@@ -11,7 +11,7 @@ $green__color: #7ce577;
   display: block;
   margin: 80px 0;
   background-color: $white__color;
-  padding: 40px 80px;
+  padding: 40px 240px 80px;
   position: relative;
 }
 
