--- a/client/src/components/Home/HappyStart.scss
+++ b/client/src/components/Home/HappyStart.scss
@@ -1,7 +1,7 @@
 @import "../Globals.scss";
 
 .HappyStart {
-  padding-bottom: 30px;
+  padding: 0 240px 80px;
   display: flex;
   flex-direction: column;
   gap: 30px;
