--- a/client/src/components/Services/Services.scss
+++ b/client/src/components/Services/Services.scss
@@ -40,7 +40,7 @@
 
       .header__box {
         overflow: hidden;
-        background-image: url("../../assets/home/woman.jpg");
+        background-image: url("../../assets/Services/woman.jpg");
         background-position: center;
         background-size: cover;
         min-height: 150px;
