--- a/client/src/components/Home/HeroSection.scss
+++ b/client/src/components/Home/HeroSection.scss
@@ -1,5 +1,6 @@
 @import "../Globals.scss";
 @import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat:wght@600&display=swap");
 
 .HeroSection {
   padding: 40px 240px 80px;
@@ -43,12 +44,20 @@
     display: flex;
     align-items: center;
     .search__btn {
-      padding: 17px 30px;
+      padding: 14px 30px;
+      font-family: "Montserrat";
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 28px;
       background-color: $light__primary__color;
+      background: radial-gradient(
+        circle at center,
+        $light__primary__color 0%,
+        $secondary__color 100%
+      );
       border-radius: 0px 12px 12px 0px;
       border: none;
-      color: $primary__color;
-      font-size: 18px;
+      color: $white__color;
     }
 
     .search__input {
