--- a/client/src/components/Home/Benefits.scss
+++ b/client/src/components/Home/Benefits.scss
@@ -1,7 +1,7 @@
 @import "../Globals.scss";
 
 .Benefits {
-  padding: 0 240px 80px;
+  padding: 20px 240px 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,62 +10,137 @@
   margin-top: 180px;
   background-color: white;
   position: relative;
-}
 
-.start__changing {
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  justify-content: center;
-  padding: 20px;
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+  }
 
-  h1,
-  p {
+  .global__symbol {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    top: -60px;
+  }
+
+  .start__changing {
     display: flex;
+    flex-direction: column;
+    align-self: center;
     justify-content: center;
+    padding: 20px;
+
+    .big_Title,
+    .mini_Title {
+      text-align: center;
+    }
+    .big_Title {
+      margin-top: 30px;
+    }
+    .mini_Title {
+      margin-top: 10px;
+      margin-bottom: 30px;
+    }
+
+    .differences__container {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      justify-content: space-between;
+
+      .differnce {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 25%;
+        padding: 20px;
+
+        img {
+          width: 60px;
+          margin-bottom: 8px;
+        }
+        h2 {
+          margin-bottom: 8px;
+        }
+
+        p {
+          text-align: center;
+        }
+      }
+    }
   }
 
-  .differences__container {
+  .focus__on__help {
     display: flex;
-    gap: 20px;
-    justify-content: space-between;
-  }
-}
-
-.focus__on__help {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-
-  p {
-    margin-bottom: 20px;
-  }
-
-  .help__options__container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    gap: 80px;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    padding: 20px;
+
+    .searchIcon {
+      width: 80px;
+      margin-bottom: 6px;
+    }
+
+    .help__options__container {
+      margin-top: 32px;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 80px;
+      align-items: center;
+      justify-content: center;
+
+      .help__option {
+        max-width: 400px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        img {
+          width: 60px;
+          margin-bottom: 8px;
+        }
+
+        h3 {
+          font-weight: 600;
+          margin-bottom: 6px;
+        }
+        h3,
+        p {
+          text-align: center;
+        }
+      }
+    }
   }
 
-  .help__option {
-    max-width: 400px;
+  .request__a__coach {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    align-items: center;
+
+    img {
+      width: 80px;
+    }
+
+    button {
+      margin-top: 10px;
+      text-transform: uppercase;
+      font-family: "Montserrat";
+      font-weight: 600;
+      font-size: 24px;
+      line-height: 28px;
+      text-align: center;
+      background: $primary__color;
+      border: none;
+      border-radius: 20px;
+      padding: 20px 20px;
+      color: $white__color;
+    }
   }
-}
-
-.request__a__coach {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding: 20px;
-}
-
-.global__symbol {
-  height: 100px;
-  width: 100px;
-  position: absolute;
-  top: -100px;
 }
