Profile Page -- version 11.71.36

--- a/client/src/components/Profile/Profile.scss
+++ b/client/src/components/Profile/Profile.scss
@@ -2,7 +2,7 @@
 
 .CoachProfile {
   padding: 80px 300px;
-  background-color: $secondary__color;
+  background-color: $very__light__blue;
   display: flex;
   gap: 40px;
 
@@ -97,7 +97,7 @@
       padding: 20px 40px;
     }
 
-    .Subjects {
+    .Languages {
       background-color: $white__color;
       padding: 20px 40px;
     }
