blogs page -- version 11.72.01

--- a/client/src/components/Globals.scss
+++ b/client/src/components/Globals.scss
@@ -14,3 +14,5 @@ $green__color: #7ce577;
 $star__color: #ffaa46;
 $green__secondary__color: #eef7e9;
 $green__darker__color: #50bf16;
+$border__radius: 4px;
+$transition: .4s;
