--- a/client/src/components/general/SignUpForm.scss
+++ b/client/src/components/general/SignUpForm.scss
@@ -1,18 +1,8 @@
 @import "../Globals.scss";
 
 .signUpForm {
-  position: fixed;
-  top: 360px;
-  left: 720px;
-  z-index: 4;
-  background-color: $white__color;
-  display: flex;
-  gap: 10px;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 20px 30px;
+  margin: 0 auto;
   max-width: 25vw;
-  box-shadow: 6px 6px 20px rgba(0, 0, 0, 0.08);
 
   .closeBtn {
     position: absolute;
@@ -33,7 +23,7 @@
       font-weight: bold;
       font-size: 28px;
       line-height: 46px;
-      margin-bottom: 0px;
+      margin: 8%;
     }
     p {
       font-family: Roboto;
