--- a/client/src/components/Coaches.scss
+++ b/client/src/components/Coaches.scss
@@ -4,7 +4,7 @@
   .Hero {
     padding: 60px 240px;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("./../assets/Home/BecomeACoach/boyStudent.png");
+      url("../assets/home/BecomeACoach/boyStudent.png");
     min-height: 500px;
     display: flex;
     flex-direction: column;
@@ -236,7 +236,7 @@
   .GetPaid {
     padding: 300px 240px;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("./../assets/Home/BecomeACoach/girlCoach.png");
+      url("../assets/home/BecomeACoach/girlCoach.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
