--- a/client/src/components/blog/blog.scss
+++ b/client/src/components/blog/blog.scss
@@ -54,11 +54,17 @@
             }
 
             .left__side {
-                width: 70%;
+                width: 80%;
                 height: 100%;
 
+                .blog__header {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    gap: 10px;
+                }
+
                 .blog__image {
-                    width: 100%;
                     height: 350px;
                     border-radius: $border__radius;
                 }
@@ -157,9 +163,9 @@
 
                     .comments__block {
                         margin-top: 10px;
-                        height: 200px;
+                        height: 350px;
                         overflow-y: auto;
-                        background-color: #fefefe;
+                        // background-color: #fefefe;
                         border-radius: $border__radius;
                         padding-left: 10px;
                         padding-right: 10px;
@@ -211,7 +217,7 @@
             }
 
             .right__side {
-                width: 30%;
+                width: 20%;
                 position: relative;
 
                 .coach__info {
