renamed Components --version 11.82.07

--- a/client/src/components/Coaches.scss
+++ b/client/src/components/Coaches.scss
@@ -1,10 +1,10 @@
-@import "Globals.scss";
+@import 'Globals.scss';
 
 .Coaches {
   .Hero {
     padding: 60px 240px;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../assets/home/becomeACoach/boyStudent.png");
+      url('../assets/home/becomeACoach/boyStudent.png');
     min-height: 500px;
     display: flex;
     flex-direction: column;
@@ -233,10 +233,11 @@
       }
     }
   }
+
   .GetPaid {
     padding: 300px 240px;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-      url("../assets/home/becomeACoach/girlCoach.png");
+      url('../assets/home/becomeACoach/girlCoach.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
