--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -39,6 +39,10 @@
         margin-right: auto;
         margin-left: auto;
 
+        .blog__row.other__blogs {
+            margin-top: 30px !important;
+        }
+
         .blog__row {
             display: flex;
             flex-direction: row;
@@ -49,8 +53,15 @@
 
             .page__title {
                 color: $primary__color;
-                font-size: 40px;
                 font-weight: 500;
+            }
+
+            h1.page__title {
+                font-size: 40px;
+            }
+
+            h2.page__title {
+                font-size: 32px;
             }
 
             .left__side {
