Added main section under work

--- a/src/components/profile/NewProfile.scss
+++ b/src/components/profile/NewProfile.scss
@@ -184,5 +184,15 @@
   }
 
   .main {
+    .cards_wrapper {
+      
+      display: grid;
+      grid-template-columns: 350px 350px ;
+      gap: 20px;
+    }
+    .title  {
+      font-size: larger;
+      font-weight: bolder;
+    }
   }
 }
