--- a/src/components/Globals.scss
+++ b/src/components/Globals.scss
@@ -28,6 +28,7 @@ $transition: 0.4s;
 html {
   font-size: 62.5%;
 }
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Montserrat:wght@500;600&family=Roboto:wght@300;400;500;700;900&display=swap');
 
 * {
   font-family: 'Roboto', fell, Georgia, Cambria, 'Times New Roman', Times, serif;
