--- a/src/components/home/Benefits.scss
+++ b/src/components/home/Benefits.scss
@@ -1,13 +1,13 @@
-@import "../Globals.scss";
+@import '../Globals.scss';
 
 .Benefits {
-  padding: 20px 240px 80px;
+  padding: 2rem 24rem 8rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 80px;
-  margin-top: 180px;
+  margin: 8rem;
+  margin-top: 18rem;
   background-color: white;
   position: relative;
 
@@ -21,10 +21,10 @@
   }
 
   .global__symbol {
-    height: 100px;
-    width: 100px;
+    height: 10rem;
+    width: 10rem;
     position: absolute;
-    top: -60px;
+    top: -6rem;
   }
 
   .start__changing {
@@ -32,24 +32,24 @@
     flex-direction: column;
     align-self: center;
     justify-content: center;
-    padding: 20px;
+    padding: 2rem;
 
     .big_Title,
     .mini_Title {
       text-align: center;
     }
     .big_Title {
-      margin-top: 30px;
+      margin-top: 3rem;
     }
     .mini_Title {
-      margin-top: 10px;
-      margin-bottom: 30px;
+      margin-top: 1rem;
+      margin-bottom: 3rem;
     }
 
     .differences__container {
       display: flex;
       align-items: center;
-      gap: 20px;
+      gap: 2rem;
       justify-content: space-between;
 
       .differnce {
@@ -57,14 +57,14 @@
         flex-direction: column;
         align-items: center;
         width: 25%;
-        padding: 20px;
+        padding: 2rem;
 
         img {
-          width: 60px;
-          margin-bottom: 8px;
+          width: 6rem;
+          margin-bottom: 0.8rem;
         }
         h2 {
-          margin-bottom: 8px;
+          margin-bottom: 0.8rem;
         }
 
         p {
@@ -78,36 +78,36 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 2rem;
 
     .searchIcon {
-      width: 80px;
-      margin-bottom: 6px;
+      width: 8rem;
+      margin-bottom: 0.6rem;
     }
 
     .help__options__container {
-      margin-top: 32px;
+      margin-top: 3.2rem;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      gap: 80px;
+      gap: 8rem;
       align-items: center;
       justify-content: center;
 
       .help__option {
-        max-width: 400px;
+        max-width: 40rem;
         display: flex;
         flex-direction: column;
         align-items: center;
 
         img {
-          width: 60px;
-          margin-bottom: 8px;
+          width: 6rem;
+          margin-bottom: 0.8rem;
         }
 
         h3 {
           font-weight: 600;
-          margin-bottom: 6px;
+          margin-bottom: 0.6rem;
         }
         h3,
         p {
@@ -120,26 +120,26 @@
   .request__a__coach {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    padding: 20px;
+    gap: 1rem;
+    padding: 2rem;
     align-items: center;
 
     img {
-      width: 80px;
+      width: 8rem;
     }
 
     button {
-      margin-top: 10px;
+      margin-top: 1rem;
       text-transform: uppercase;
-      font-family: "Montserrat";
+      font-family: 'Montserrat';
       font-weight: 600;
-      font-size: 24px;
-      line-height: 28px;
+      font-size: 2.4rem;
+      line-height: 2.8rem;
       text-align: center;
       background: $primary__color;
       border: none;
-      border-radius: 20px;
-      padding: 20px 20px;
+      border-radius: 2rem;
+      padding: 2rem 2rem;
       color: $white__color;
     }
   }
